# ai_tools

./: .gitignore  GITHUB_OPERATIONS.md  LEARNING_NEW_TOPIC  LEARNING_NEW_TOPIC_V2.md  LLM_REFLECTION_DEBUGGING_RULES.md  NOTEBOOK_LM_PODCAST_PROMPT.md  PROMPT_IMPROVEMENT.md  README.md  TASK_PLANNING_AND_PRIORITIZATION.md  prompts.py
agents/: AGENT_CONVERSATION_STYLE.md  HOW_TO_WRITE_PROMPTS.md  README.md
agents/personas/: README.md
agents/task_instructions/: QUICK_REFERENCE.md  README.md
automations/: README.md
codex/automations/: DAILY_BUG_SCAN.md  DAILY_REPO_CONVENTIONS.md  FEATURE_IDEA_SCANNER.md  MARKDOWN_SCANNER.md  REFACTOR_SCAN.md  UPDATE_AGENTS_MD.md  WEEKLY_CHANGELOG_UPDATE.md  WEEKLY_WORK_UPDATES.md
skills/: README.md
skills/comprehensive-code-review/: SKILL.md
skills/create-implementation-plan/: SKILL.md
skills/create-pr/: SKILL.md
skills/explain-as-python/: SKILL.md
skills/fix-ci/: SKILL.md
skills/implement-plan-and-open-pr/: SKILL.md
skills/latex-exact-transcriber/: SKILL.md
skills/probe-understanding-manager/: SKILL.md  (+1 more)
social_media_app/backend/: .coverage  .coveragerc  Dockerfile  README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  pyproject.toml  pytest.ini
social_media_app/backend/app/: data.py  main.py  schemas.py  telemetry.py
social_media_app/backend/app/routers/: feed.py  interactions.py  profiles.py
social_media_app/backend/social_media_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
social_media_app/backend/tests/: test_errors.py  test_feed.py  test_interactions.py  test_profiles.py
(+256 files in other folders)
